fix background color on overflow

--- a/app/assets/stylesheets/components/_landing_page.scss
+++ b/app/assets/stylesheets/components/_landing_page.scss
@@ -3,7 +3,6 @@ section#most-recent {
   padding-top: 100px;
   background: white;
   width: 1200px;
-  height: 100%;
 }
 
 h1#new-tracks-header {
